<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aboutimage"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tfvabout"
        android:text="@string/tfvabout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tfvabout2"
        android:text="@string/tfvversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tfvabout"
        android:layout_centerHorizontal="true"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:text="@string/tfv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tfvabout2"
        android:layout_centerHorizontal="true"
        android:textColor="#FF0000"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView2"
        android:text="@string/tfv_aboutinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />
  
</RelativeLayout>